updated dependencies, updated generated code